package ar.edu.utn.frba.dds.geoRef;

public class LocalidadGeoref {
  public String id;
  public String nombre;
}