package ar.edu.utn.frba.dds.geoRef;

public class ProvinciaGeoref {
  public String id;
  public String nombre;
}